@@ -38,6 +38,7 @@ import static org.hisp.dhis.analytics.AnalyticsConstants.KEY_USER_ORGUNIT_GRANDC
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_ENROLLMENT_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_EVENT_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_GEOMETRY_LIST;
+import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_OU_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_TRACKED_ENTITY_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventDataQueryService.SortableItems.isSortable;
 import static org.hisp.dhis.analytics.event.data.DefaultEventDataQueryService.SortableItems.translateItemIfNecessary;
@@ -56,6 +57,7 @@ import static org.hisp.dhis.common.EventDataQueryRequest.getStageInValue;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
@@ -77,6 +79,8 @@ import org.hisp.dhis.analytics.event.data.queryitem.QueryItemFilterHandlerRegist
 import org.hisp.dhis.analytics.table.EnrollmentAnalyticsColumnName;
 import org.hisp.dhis.analytics.table.EventAnalyticsColumnName;
 import org.hisp.dhis.common.BaseDimensionalItemObject;
+import org.hisp.dhis.common.BaseDimensionalObject;
+import org.hisp.dhis.common.DimensionType;
 import org.hisp.dhis.common.DimensionalItemObject;
 import org.hisp.dhis.common.DimensionalObject;
 import org.hisp.dhis.common.EventAnalyticalObject;
@@ -168,7 +172,8 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
       throwIllegalQueryEx(ErrorCode.E7130, request.getStage());
     }
 
-    List<String> coordinateFields = getCoordinateFields(request);
+    CoordinateFieldResolution coordinateFieldResolution = getCoordinateFieldResolution(request);
+    List<String> coordinateFields = coordinateFieldResolution.coordinateFields();
 
     Set<EnrollmentStatus> enrollmentStatuses = new LinkedHashSet<>();
     if (request.getEnrollmentStatus() != null) {
@@ -217,6 +222,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
             .withTimeField(request.getTimeField())
             .withOrgUnitField(new OrgUnitField(request.getOrgUnitField()))
             .withCoordinateFields(coordinateFields)
+            .withGeometrySources(coordinateFieldResolution.geometrySources())
             .withHeaders(request.getHeaders())
             .withPage(request.getPage())
             .withPageSize(request.getPageSize())
@@ -336,6 +342,10 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
    */
   @Override
   public List<String> getCoordinateFields(EventDataQueryRequest request) {
+    return getCoordinateFieldResolution(request).coordinateFields();
+  }
+
+  private CoordinateFieldResolution getCoordinateFieldResolution(EventDataQueryRequest request) {
     final String program = request.getProgram();
     // TODO Remove when all web apps stop using old names of coordinate fields
     final String coordinateField = mapCoordinateField(request.getCoordinateField());
@@ -343,6 +353,8 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
     final String fallbackCoordinateField = mapCoordinateField(request.getFallbackCoordinateField());
 
     List<String> coordinateFields = new ArrayList<>();
+    boolean fallbackActive =
+        request.getFallbackCoordinateField() != null || defaultCoordinateFallback;
 
     if (coordinateField == null) {
       coordinateFields.add(StringUtils.EMPTY);
@@ -390,8 +402,41 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
         eventCoordinateService.getFallbackCoordinateFields(
             program, fallbackCoordinateField, defaultCoordinateFallback));
 
-    return coordinateFields.stream().distinct().collect(Collectors.toList());
+    List<String> distinctCoordinateFields = coordinateFields.stream().distinct().toList();
+
+    return new CoordinateFieldResolution(
+        distinctCoordinateFields,
+        fallbackActive ? getGeometrySources(distinctCoordinateFields) : List.of());
   }
+
+  private List<EventQueryParams.GeometrySource> getGeometrySources(List<String> coordinateFields) {
+    LinkedHashMap<String, String> geometrySources = new LinkedHashMap<>();
+
+    for (String coordinateField : coordinateFields) {
+      addGeometrySource(geometrySources, coordinateField);
+    }
+
+    return geometrySources.entrySet().stream()
+        .map(entry -> new EventQueryParams.GeometrySource(entry.getKey(), entry.getValue()))
+        .toList();
+  }
+
+  private void addGeometrySource(LinkedHashMap<String, String> geometrySources, String field) {
+    geometrySources.putIfAbsent(field, getGeometrySource(field));
+  }
+
+  private String getGeometrySource(String field) {
+    return switch (field) {
+      case COL_NAME_EVENT_GEOMETRY -> "psigeometry";
+      case COL_NAME_ENROLLMENT_GEOMETRY -> "pigeometry";
+      case COL_NAME_TRACKED_ENTITY_GEOMETRY -> "teigeometry";
+      case COL_NAME_OU_GEOMETRY -> COL_NAME_OU_GEOMETRY;
+      default -> StringUtils.removeEnd(field, "_geom");
+    };
+  }
+
+  private record CoordinateFieldResolution(
+      List<String> coordinateFields, List<EventQueryParams.GeometrySource> geometrySources) {}
 
   @Override
   public QueryItem getQueryItem(String dimensionString, Program program, EventOutputType type) {
@@ -673,7 +718,12 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           continue;
         }
         if (isProgramStatusDimension(input.dimensionId())) {
-          enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          if (isAggregateRequest(request)) {
+            requireNonEmptyStatusFilter(input.items(), input.rawDimension());
+            params.addFilter(getProgramStatusDimension(input.items(), input.rawDimension()));
+          } else {
+            enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          }
           continue;
         }
 
@@ -718,7 +768,11 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           continue;
         }
         if (isProgramStatusDimension(input.dimensionId())) {
-          enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          if (isAggregateRequest(request)) {
+            params.addDimension(getProgramStatusDimension(input.items(), input.rawDimension()));
+          } else {
+            enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          }
           continue;
         }
 
@@ -992,27 +1046,66 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
         || ColumnHeader.PROGRAM_STATUS.getItem().equalsIgnoreCase(dimensionId);
   }
 
-  private Set<EnrollmentStatus> parseEnrollmentStatuses(
-      List<String> statusItems, String dimensionString) {
-    if (statusItems == null || statusItems.isEmpty()) {
+  private boolean isAggregateRequest(EventDataQueryRequest request) {
+    return request.getEndpointAction() == RequestTypeAware.EndpointAction.AGGREGATE;
+  }
+
+  /**
+   * Builds the {@link DimensionalObject} for {@code PROGRAM_STATUS}. The dimension identifier
+   * ({@code "programstatus"}) drives the response header; {@code dimensionName} ({@code
+   * "enrollmentstatus"}) is the underlying analytics column referenced by {@code quoteAlias} in the
+   * SQL builder. An empty item list is permitted on the aggregate dimension path — it means
+   * "include the column as a group-by without filtering rows."
+   */
+  private DimensionalObject getProgramStatusDimension(
+      List<String> rawItems, String dimensionString) {
+    return new BaseDimensionalObject(
+        ColumnHeader.PROGRAM_STATUS.getItem(),
+        DimensionType.PROGRAM_STATUS,
+        EventAnalyticsColumnName.ENROLLMENT_STATUS_COLUMN_NAME,
+        ColumnHeader.PROGRAM_STATUS.getName(),
+        parseStatusItems(rawItems, dimensionString));
+  }
+
+  private static Set<EnrollmentStatus> parseEnrollmentStatuses(
+      List<String> rawItems, String dimensionString) {
+    requireNonEmptyStatusFilter(rawItems, dimensionString);
+
+    return rawItems.stream()
+        .map(raw -> parseEnrollmentStatus(raw, dimensionString))
+        .collect(Collectors.toCollection(LinkedHashSet::new));
+  }
+
+  private static List<DimensionalItemObject> parseStatusItems(
+      List<String> rawItems, String dimensionString) {
+    if (rawItems == null || rawItems.isEmpty()) {
+      return List.of();
+    }
+
+    return rawItems.stream()
+        .map(raw -> parseEnrollmentStatus(raw, dimensionString))
+        .distinct()
+        .<DimensionalItemObject>map(status -> new BaseDimensionalItemObject(status.name()))
+        .toList();
+  }
+
+  private static EnrollmentStatus parseEnrollmentStatus(String raw, String dimensionString) {
+    if (StringUtils.isBlank(raw)) {
       throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
     }
 
-    Set<EnrollmentStatus> statuses = new LinkedHashSet<>();
-
-    for (String statusItem : statusItems) {
-      if (StringUtils.isBlank(statusItem)) {
-        throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
-      }
-
-      try {
-        statuses.add(EnrollmentStatus.valueOf(statusItem.trim().toUpperCase()));
-      } catch (IllegalArgumentException ex) {
-        throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
-      }
+    try {
+      return EnrollmentStatus.valueOf(raw.trim().toUpperCase(java.util.Locale.ROOT));
+    } catch (IllegalArgumentException ex) {
+      throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
+      throw ex; // unreachable
     }
+  }
 
-    return statuses;
+  private static void requireNonEmptyStatusFilter(List<String> rawItems, String dimensionString) {
+    if (rawItems == null || rawItems.isEmpty()) {
+      throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
+    }
   }
 
   /**
